--- a/src/vmm-open-connection.ui
+++ b/src/vmm-open-connection.ui
@@ -39,6 +39,7 @@
     <property name="can_focus">False</property>
     <property name="border_width">6</property>
     <property name="title" translatable="yes">Add Connection</property>
+    <property name="resizable">False</property>
     <property name="type_hint">dialog</property>
     <signal name="delete-event" handler="on_vmm_open_connection_delete_event" swapped="no"/>
     <child internal-child="vbox">
@@ -124,7 +125,7 @@
                 <property name="left_attach">1</property>
                 <property name="right_attach">2</property>
                 <property name="x_options">GTK_FILL</property>
-                <property name="y_options">GTK_FILL</property>
+                <property name="y_options"/>
               </packing>
             </child>
             <child>
@@ -165,7 +166,7 @@
                 <property name="top_attach">2</property>
                 <property name="bottom_attach">3</property>
                 <property name="x_options">GTK_FILL</property>
-                <property name="y_options">GTK_FILL</property>
+                <property name="y_options"/>
               </packing>
             </child>
             <child>
@@ -177,6 +178,7 @@
                 <property name="right_attach">2</property>
                 <property name="top_attach">5</property>
                 <property name="bottom_attach">6</property>
+                <property name="y_options"/>
               </packing>
             </child>
             <child>
@@ -190,6 +192,7 @@
                 <property name="top_attach">7</property>
                 <property name="bottom_attach">8</property>
                 <property name="x_options">GTK_FILL</property>
+                <property name="y_options"/>
               </packing>
             </child>
             <child>
@@ -205,6 +208,7 @@
                 <property name="right_attach">2</property>
                 <property name="top_attach">7</property>
                 <property name="bottom_attach">8</property>
+                <property name="y_options"/>
               </packing>
             </child>
             <child>
@@ -222,6 +226,7 @@
                 <property name="right_attach">2</property>
                 <property name="top_attach">1</property>
                 <property name="bottom_attach">2</property>
+                <property name="y_options"/>
               </packing>
             </child>
             <child>
@@ -326,6 +331,7 @@
                 <property name="top_attach">3</property>
                 <property name="bottom_attach">4</property>
                 <property name="x_options">GTK_FILL</property>
+                <property name="y_options"/>
               </packing>
             </child>
             <child>
@@ -340,6 +346,7 @@
                 <property name="right_attach">2</property>
                 <property name="top_attach">3</property>
                 <property name="bottom_attach">4</property>
+                <property name="y_options"/>
               </packing>
             </child>
             <child>
@@ -350,7 +357,7 @@
                 <signal name="changed" handler="on_hostname_combo_changed" swapped="no"/>
                 <child internal-child="entry">
                   <object class="GtkEntry" id="combobox-entry">
-                    <property name="can_focus">False</property>
+                    <property name="can_focus">True</property>
                   </object>
                 </child>
               </object>
@@ -359,6 +366,7 @@
                 <property name="right_attach">2</property>
                 <property name="top_attach">4</property>
                 <property name="bottom_attach">5</property>
+                <property name="y_options"/>
               </packing>
             </child>
           </object>
