--- a/src/vmm-progress.ui
+++ b/src/vmm-progress.ui
@@ -5,6 +5,7 @@
     <property name="can_focus">False</property>
     <property name="border_width">12</property>
     <property name="title" translatable="yes">Operation in progress</property>
+    <property name="resizable">False</property>
     <property name="window_position">center-on-parent</property>
     <property name="default_width">300</property>
     <property name="default_height">200</property>
@@ -49,6 +50,7 @@
                     <property name="yalign">0</property>
                     <property name="label" translatable="yes">Please wait a few moments...</property>
                     <property name="wrap">True</property>
+                    <property name="width_chars">40</property>
                   </object>
                   <packing>
                     <property name="expand">True</property>
